--- a/vk_lib/vk_lib/vk_lib.vcxproj
+++ b/vk_lib/vk_lib/vk_lib.vcxproj
@@ -161,21 +161,14 @@
   <ItemGroup>
     <ClInclude Include="render.h" />
     <ClInclude Include="Setup\device.h" />
-    <ClInclude Include="Setup\instance.h" />
     <ClInclude Include="Setup\queue_families.h" />
-    <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Setup\validation.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Setup\device.cpp" />
-    <ClCompile Include="Setup\instance.cpp" />
     <ClCompile Include="Setup\queue_familes.cpp" />
-    <ClCompile Include="stdafx.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
-    </ClCompile>
+    <ClCompile Include="Setup\validation.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
